--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,4 @@
-plugins {
-    id("java")
-}
+apply plugin: 'java'
 
 group = "org.example"
 version = "1.0-SNAPSHOT"
@@ -23,5 +21,5 @@ dependencies {
     implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.11'
     testImplementation group: 'junit', name: 'junit', version: '4.13.2'
 
-    testImplementation group: 'org.hamcrest', name: 'hamcrest-core', version: '2.2'
+    implementation group: 'org.hamcrest', name: 'hamcrest', version: '2.2'
 }
